--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "iloli-plugin",
-    "version": "1.6.8",
-    "author": "@饺子 @向日葵",
+    "version": "1.0.0-beta",
+    "author": "@Jiaozi @向日葵",
     "description": "Yunzai-Bot功能性插件",
     "main": "index.js",
     "type": "module",
