--- a/package.json
+++ b/package.json
@@ -1,24 +1,12 @@
 {
   "name": "iloli-plugin",
-  "version": "1.0.0-beta",
-  "description": "Yunzai-Bot娱乐扩展",
+  "version": "1.0.0",
+  "description": "Yunzai 插件",
   "main": "index.js",
   "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/T060925ZX/iloli-plugin"
-  },
-  "keywords": [
-    "Yunzai-Bot",
-    "iloli-plugin"
-  ],
-  "author": "@jiaozi",
-  "dependencies": {
-    "axios": "*",
-    "cheerio": "1.0.0-rc.12"
-  },
-  "license": "MIT"
+  "scripts": {},
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
+  "dependencies": {}
 }
