--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   "keywords": [],
   "author": "",
   "license": "MIT",
-  "dependencies": {}
+  "dependencies": {
+    "puppeteer": "*",
+    "yaml": "^2.7.1"
+  }
 }
