--- a/config/default_config/config.yaml
+++ b/config/default_config/config.yaml
@@ -45,11 +45,12 @@ emoji_all: true
 
 # NTQQ表情回应配置
 onebot_emoji_enable: false 
-onebot_emoji_whiteUserList: []  
-onebot_emoji_whiteGroupList: []  
+onebot_emoji_whiteUserList: []
+onebot_emoji_whiteGroupList: []
 onebot_emoji_blackUserList: [] 
-onebot_emoji_blackGroupList: []  
-onebot_emoji_globalRandom: 100  onebot_emoji_sleepTime: 100  
+onebot_emoji_blackGroupList: []
+onebot_emoji_globalRandom: 100
+onebot_emoji_sleepTime: 100
 onebot_emoji_all: true 
 onebot_emoji_fixedEmojiId: 66  
 
