--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "puppeteer": "*",
-    "yaml": "^2.7.1"
+    "yaml": "^2.7.1",
+    "js-yaml": "^4.1.0"
   }
 }
