修复帮助配置文件路径拼写错误，并更新帮助内容

--- a/config/default_config/help.yaml
+++ b/config/default_config/help.yaml
@@ -1,75 +1,35 @@
-- group: '游戏功能'
-  list:
-    - icon: 'paimon'
-      title: '#喵喵帮助'
-      desc: '原神帮助'
-    - icon: 'pamu'
-      title: '*帮助'
-      desc: '星铁帮助'
-    - icon: 'zzz'
-      title: '%帮助'
-      desc: '绝区零帮助'
-    - icon: 'wave'
-      title: '~帮助'
-      desc: '鸣潮帮助'
-    - icon: 'Sky'
-      title: '#光遇帮助'
-      desc: '光遇帮助'
 - group: '娱乐功能'
   list:
     - icon: 'paimon'
-      title: '#土块帮助'
-      desc: '土块插件'
+      title: '#模拟人生'
+      desc: '对接 AI 的模拟人生'
     - icon: 'paimon'
-      title: '梁氏帮助'
-      desc: '梁氏插件'
+      title: '戳他@ 1下'
+      desc: '戳死你！！'
     - icon: 'paimon'
-      title: '#fan帮助'
-      desc: '繁星插件'
-    - icon: 'paimon'
-      title: '#chatgpt帮助'
-      desc: 'Ai聊天插件'
-    - icon: 'paimon'
-      title: '#小飞帮助'
-      desc: '小飞插件'
-- group: '实用功能'
+      title: '今日超能力'
+      desc: '随机超能力以及副作用'
+- group: 'AI功能'
   list:
-    - icon: '绑定账号'
-      title: '#扫码登录'
-      desc: '扫码绑定米游社ck,sk'
-    - icon: '绑定账号'
-      title: '#绑定帮助'
-      desc: '米哈游绑定设备'
     - icon: 'paimon'
-      title: '#椰奶帮助'
-      desc: '椰奶插件'
+      title: '#dp 你好'
+      desc: '与 deepseek 对话'
     - icon: 'paimon'
-      title: '#图鉴帮助'
-      desc: '图鉴'
+      title: '#qwen 你好'
+      desc: '与 通义千问 对话'
     - icon: 'paimon'
-      title: '@+内容'
-      desc: '和机器人猫娘聊天'
+      title: '#kimi 你好'
+      desc: '与 kimi 对话'
 - group: '被动功能'
   list:
-    - icon: 'flower_2'
-      title: '戳一戳'
-      desc: '戳一戳机器人回复'
-    - icon: 'flower_2'
-      title: '进退群通知'
-      desc: '成员进群退群通知'
-- group: '定制功能'
+    - icon: 'paimon'
+      title: '表情回应'
+      desc: '请到Guoba配置'
+    - icon: 'paimon'
+      title: '戳一戳回复'
+      desc: '与 通义千问 对话'
+- group: '实用功能'
   list:
     - icon: 'paimon'
-      title: '身高帮助'
-      desc: '光遇身高查询'
-- group: '关于BOT'
-  list:
-    - icon: '攻略'
-      title: '本Bot永久免费'
-      desc: '如有被骗请自行退款'
-    - icon: 'ledger'
-      title: '投喂'
-      desc: '投喂作者'
-    - icon: 'ledger'
-      title: '投喂榜'
-      desc: '查看投喂记录'
+      title: '找[@/QQ号]'
+      desc: '查看某人的详细QQ信息'
