Implement code changes to enhance functionality and improve performance

--- a/config/default_config/help_config.yaml
+++ b/config/default_config/help_config.yaml
@@ -3,4 +3,4 @@ main_title: iloli-plugin
 sub_title: 帮助详情
 columns: 3
 default_hitokoto: 种自己的花，爱自己的宇宙
-background_image_url: none
+background_image_url: 'https://gitee.com/T060925ZX/iloli-plugin/raw/main/resources/image/nh.webp'
