--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "puppeteer": "*",
     "yaml": "^2.7.1",
-    "js-yaml": "*"
+    "js-yaml": "*",
+    "sharp": "*"
   }
 }
