新增随机图片标签预设配置，优化图片请求时的标签选择逻辑

--- a/config/default_config/config.yaml
+++ b/config/default_config/config.yaml
@@ -64,3 +64,11 @@ pixiv_size: 'original'
 pixiv_excludeAI: true
 pixiv_r18_Master: 1
 pixiv_r18: 0
+random_pic:
+  -
+    - - "萝莉"
+    - - "女孩子"
+  -
+    - - "萝莉"
+    - - "猫耳"
+    - - "白丝"
