新增“来n份xx涩图”功能，优化娱乐功能列表

--- a/config/default_config/help.yaml
+++ b/config/default_config/help.yaml
@@ -9,6 +9,9 @@
     - icon: 'paimon'
       title: '今日超能力'
       desc: '随机超能力以及副作用'
+    - icon: 'paimon'
+      title: '来n份xx涩图'
+      desc: '涩图 xx为标签'
 - group: 'AI功能'
   list:
     - icon: 'paimon'
