新增全局留言功能，支持跨群留言提醒 调整帮助文档，优化清屏和留言功能描述

--- a/config/default_config/help.yaml
+++ b/config/default_config/help.yaml
@@ -37,5 +37,8 @@
       title: '找[@/QQ号]'
       desc: '查看某人的详细QQ信息'
     - icon: 'paimon'
-      title: '清屏'
+      title: '#清屏'
       desc: '批量撤回，后面可加数字'
+    - icon: 'paimon'
+      title: '#留言xx @xx或QQ号'
+      desc: '给某人留言'
