--- a/config/default_config/help.yaml
+++ b/config/default_config/help.yaml
@@ -23,14 +23,6 @@
     - icon: 'paimon'
       title: '#kimi 你好'
       desc: '与 kimi 对话'
-- group: '被动功能'
-  list:
-    - icon: 'paimon'
-      title: '表情回应'
-      desc: '请到Guoba配置'
-    - icon: 'paimon'
-      title: '戳一戳回复'
-      desc: '与 通义千问 对话'
 - group: '实用功能'
   list:
     - icon: 'paimon'
@@ -42,3 +34,14 @@
     - icon: 'paimon'
       title: '#留言xx @xx或QQ号'
       desc: '给某人留言'
+- group: '被动功能'
+  list:
+    - icon: 'paimon'
+      title: '表情回应'
+      desc: '请到Guoba配置'
+    - icon: 'paimon'
+      title: '戳一戳回复'
+      desc: '与 通义千问 对话'
+    - icon: 'paimon'
+      title: '有的兄弟'
+      desc: '有的兄弟，有的'
