--- a/config/default_config/random_ability.yaml
+++ b/config/default_config/random_ability.yaml
@@ -1,176 +1,181 @@
 buff:
-  - "免疫寒冷，且在寒冷环境下不需要睡觉、进食"
-  - "不会生病，体质增强"
-  - "你在18岁之前不会生病、衰老"
-  - "你在吃完蔬菜后短时间内体质增强，同时能将蔬菜转化成所有身体需要的营养"
-  - "你可以将和你接触到的物体透明化"
-  - "任何人只要看见你就会暂时遗忘并忽略你的存在，同时不会被电子设备看到"
-  - "你可以在大脑里下载并使用软件"
-  - "可以随意更改别人的梦境"
-  - "可以串改他人的记忆"
-  - "可以模仿一切声音"
-  - "可以把化合物拆分为不同单质"
-  - "可以控制核聚变"
-  - "可以预知未来一分钟内会发生的事情"
-  - "可以使他人的任何疾病康复"
-  - "可以复活一些正常死亡不久的生物"
-  - "你可以随意变化外貌"
-  - "你可以自由控制情绪"
-  - "说出的话都会被别人相信"
-  - "读取他人想法"
-  - "你可以消耗五年寿命将死去60天以内的人在你的面前复活（被复活的人年龄倒退5年），冷却60天"
-  - "可以给物体一个任意方向的力,力的大小小于物体的两倍重力"
-  - "可以短暂地把一定范围内的液体固化"
-  - "将指定的物品变成随机物品"
-  - "你不需要睡觉"
-  - "你可以随意切换自己的性别"
-  - "每天可以隐身一个小时（衣服不会隐身）"
-  - "你可以熟练掌握操控任何载具"
-  - "你可以在睡梦中身临其境细节拉满上下其手地体验自己过去的任意一段经历"
-  - "每周星期四都能吃到肯德基"
-  - "玩抽卡游戏十发内必中"
-  - "打高端局像炸鱼"
-  - "注销账号时游戏货币的单位直接换行人民币单位到你的银行卡"
-  - "你的对局中有挂时开挂者电脑自动下载360全家桶"
-  - "开挂者可承担所有玩家伤害（包括队友）"
-  - "大喊开挂者ID可直接将其封号"
-  - "组队刷副本时可以指定掉落物品"
-  - "睡前最后一把必赢"
-  - "你骂过的队友下一把必出现在对面"
-  - "胜率增加20%"
-  - "你的力气增加100%"
-  - "动态视力增加100%"
-  - "当你红温时攻击力加100%暴击率加50%"
-  - "皮肤或时装颜色越粉，伤害越高"
-  - "穿的越少攻击力越高"
-  - "蛇皮走位时对手命中率降低为0"
-  - "向队友撒娇可以满足你任何需求"
-  - "附近的人对你增加好感度"
-  - "所有女性喜欢你"
-  - "所有男性喜欢你"
-  - "可以假装不尴尬，没人能发现"
-  - "拥有美神等级的颜值"
-  - "轻松说服朋友替你挡灾"
-  - "成为主角"
-  - "召唤鸣人"
-  - "召唤潘金莲"
-  - "召唤动漫角色"
-  - "时间暂停"
-  - "时间加速"
-  - "可以穿越到任何同人里"
-  - "触碰使人高潮"
-  - "身边没人的时候隐身"
-  - "任意物品增加1CM"
-  - "当明星"
-  - "复制任何物品"
-  - "改变物价"
-  - "看清别人身份"
-  - "出场自带BGM"
-  - "可以秒杀带系统的穿越者"
-  - "可以选择性遗忘任意事情"
-  - "你遇到困难、危险时，在30天后知道完美的解决方法"
-  - "玩的英雄多阴间你的性格就有多阳光"
-  - "让世界财富排名前100名的人每人以合法方式赠送给你一个小目标"
-
+  - 免疫寒冷，且在寒冷环境下不需要睡觉、进食
+  - 不会生病，体质增强
+  - 你在18岁之前不会生病、衰老
+  - 你在吃完蔬菜后短时间内体质增强，同时能将蔬菜转化成所有身体需要的营养
+  - 你可以将和你接触到的物体透明化
+  - 任何人只要看见你就会暂时遗忘并忽略你的存在，同时不会被电子设备看到
+  - 你可以在大脑里下载并使用软件
+  - 可以随意更改别人的梦境
+  - 可以串改他人的记忆
+  - 可以模仿一切声音
+  - 可以把化合物拆分为不同单质
+  - 可以控制核聚变
+  - 可以预知未来一分钟内会发生的事情
+  - 可以使他人的任何疾病康复
+  - 可以复活一些正常死亡不久的生物
+  - 你可以随意变化外貌
+  - 你可以自由控制情绪
+  - 说出的话都会被别人相信
+  - 读取他人想法
+  - 你可以消耗五年寿命将死去60天以内的人在你的面前复活（被复活的人年龄倒退5年），冷却60天
+  - 可以给物体一个任意方向的力,力的大小小于物体的两倍重力
+  - 可以短暂地把一定范围内的液体固化
+  - 将指定的物品变成随机物品
+  - 你不需要睡觉
+  - 你可以随意切换自己的性别
+  - 每天可以隐身一个小时（衣服不会隐身）
+  - 你可以熟练掌握操控任何载具
+  - 你可以在睡梦中身临其境细节拉满上下其手地体验自己过去的任意一段经历
+  - 每周星期四都能吃到肯德基
+  - 玩抽卡游戏十发内必中
+  - 打高端局像炸鱼
+  - 注销账号时游戏货币的单位直接换行人民币单位到你的银行卡
+  - 你的对局中有挂时开挂者电脑自动下载360全家桶
+  - 开挂者可承担所有玩家伤害（包括队友）
+  - 大喊开挂者ID可直接将其封号
+  - 组队刷副本时可以指定掉落物品
+  - 睡前最后一把必赢
+  - 你骂过的队友下一把必出现在对面
+  - 胜率增加20%
+  - 你的力气增加100%
+  - 动态视力增加100%
+  - 当你红温时攻击力加100%暴击率加50%
+  - 皮肤或时装颜色越粉，伤害越高
+  - 穿的越少攻击力越高
+  - 蛇皮走位时对手命中率降低为0
+  - 向队友撒娇可以满足你任何需求
+  - 附近的人对你增加好感度
+  - 所有女性喜欢你
+  - 所有男性喜欢你
+  - 可以假装不尴尬，没人能发现
+  - 拥有美神等级的颜值
+  - 轻松说服朋友替你挡灾
+  - 成为主角
+  - 召唤鸣人
+  - 召唤潘金莲
+  - 召唤动漫角色
+  - 时间暂停
+  - 时间加速
+  - 可以穿越到任何同人里
+  - 触碰使人高潮
+  - 身边没人的时候隐身
+  - 任意物品增加1CM
+  - 当明星
+  - 复制任何物品
+  - 改变物价
+  - 看清别人身份
+  - 出场自带BGM
+  - 可以秒杀带系统的穿越者
+  - 可以选择性遗忘任意事情
+  - 你遇到困难、危险时，在30天后知道完美的解决方法
+  - 玩的英雄多阴间你的性格就有多阳光
+  - 让世界财富排名前100名的人每人以合法方式赠送给你一个小目标
+  - 每次考试都能满分
+  - 怎么吃都不胖
+  - 牛子随意变长变大
+  - 变成小南梁
 debuff:
-  - "每年地球上温度下降5度"
-  - "新的一年到来时，任何人都有50%的概率彻底遗忘你"
-  - "成功概率50%，失败消耗五年寿命"
-  - "下落高度超过一米就会摔伤，超过两米直接死亡"
-  - "你只能在联网状态下思考"
-  - "你每天都会遭遇一场针对你的刺杀"
-  - "你每天必需使用该能力1000次否则能力会失效"
-  - "你会得前列腺炎"
-  - "你的皮肤对水过敏"
-  - "你会穿越到异世界并且遇到一只史莱姆和骷髅"
-  - "有一颗半径50KMM的小行星马上要砸向你"
-  - "你每天起来都不会记得昨天发生的事"
-  - "你的仇人会得到相同的能力"
-  - "你的手机上面的所有内容都会被你的父母查看"
-  - "你会不受控制地追着狗咬"
-  - "你的智商行为变为6岁水平"
-  - "你必须跑到人多的地方把这个超能力的名字喊出来才能生效"
-  - "受伤时，在你的周围生成6个即爆炸弹💣"
-  - "你对面食、米饭过敏"
-  - "一旦你杀了一个人（包括间接），你将在24小时后死亡"
-  - "你创造出来的人和你使用同一条生命。（死了一起死）且不能召回"
-  - "50年后将迎来清算，地球毁灭，并且所有居住其上的生物都会死去"
-  - "有事可做时会做出诡异行为，包括但不限于乱翻背包，乱扔骰子，跳杂技，后空翻等，导致你看起来像个🤡"
-  - "你的大便变得和石头一样硬"
-  - "立即死亡"
-  - "你变得极为敏感，疑神疑鬼，连一只苍蝇飞过都会被吓一跳"
-  - "你坐过的载具会以各种方式被毁"
-  - "只能在屋顶下跳跃"
-  - "肉身强度会不断下降"
-  - "每说一个字都会失血1ml"
-  - "事后那些人会知道这是谁干的以及事情经过"
-  - "你的财富会变成负数，并且不会有人感激你可怜你"
-  - "如果别人将你击杀，他们将夺取包括本能力在内的你的所有超能力；上面这条信息将在你获得能力的瞬间向全球播报"
-  - "一旦看着电子屏幕累计15秒你的双眼就会极度疲劳，需要休息5分钟才能缓解"
-  - "你无法通过嘴巴说话了"
-  - "你永远有饥饿感"
-  - "你如果一天睡不满12小时就会极度疲惫，且在获得充足睡眠之前无法使用本能力"
-  - "你将重度失眠"
-  - "每次发动要随机消耗一个真心爱你的人"
-  - "永久失去味觉"
-  - "永久失明"
-  - "打低端局像人机"
-  - "静态视力减少100%"
-  - "电脑自动下载原神"
-  - "游戏中载具驾驶技术和现实中驾驶技术成反比"
-  - "成为NPC"
-  - "全天被直播"
-  - "成为变态"
-  - "变成小兵"
-  - "不许穿裤子"
-  - "催眠百分百被命中"
-  - "变成卷毛狒狒"
-  - "参加的聚会必定遇难"
-  - "踩到石头必定被绊倒"
-  - "穿越成封印物，不见天日的那种"
-  - "忘记一切现代知识"
-  - "会被任何笑话逗笑，无论有多冷"
-  - "成为重度脸盲"
-  - "一定会被陌生人当成邪教徒"
-  - "不定期大声说出心中所想"
-  - "身高不及1米5"
-  - "成为顶级乐子人"
-  - "每天只能使用3次超能力"
-  - "每次使用能力后会随机遗忘一个常用词"
-  - "使用能力时需要说出特定咒语"
-  - "使用能力后会短暂失明10分钟"
-  - "每次能力使用后需要摄入5000卡路里"
-  - "能力使用部位会暂时金属化"
-  - "使用能力后会被小动物讨厌24小时"
-  - "每次能力使用后会随机得罪一个人"
-  - "使用能力时周围人会听到尴尬的音效"
-  - "使用能力后周围3米内电子设备会死机"
-  - "能力使用时会产生难闻的气味"
-  - "每次使用能力会随机改变周围物品颜色"
-  - "周五全天能力失效"
-  - "每月随机一天所有能力反转效果"
-  - "使用能力后有10%几率触发相反效果"
-  - "使用游戏能力后现实运气下降50%"
-  - "获胜后下一局必定匹配到代练车队"
-  - "抽卡出货后接下来10抽必定全R卡"
-  - "能力使用后会随机产生一种强烈情绪"
-  - "每次使用能力会暂时失去一种情感"
-  - "能力使用后会对最近的人产生过度依赖"
-  - "使用能力后会忘记刚才的1分钟"
-  - "每次能力使用会随机丢失一段记忆"
-  - "能力使用后会产生虚假记忆"
-  - "能力使用后体重会增加10%"
-  - "每次使用能力会随机一个部位疼痛"
-  - "能力使用时重力会轻微异常"
-  - "能力使用后生物钟混乱24小时"
-  - "每次使用时间类能力会加速自身衰老"
-  - "空间能力使用后会产生1小时时差感"
-  - "使用能力后会随机改变口头禅"
-  - "每次能力使用后会获得一个奇怪癖好"
-  - "能力使用时会产生中二病发言冲动"
-  - "使用复活能力后自己会随机获得死者一个特征"
-  - "隐身结束时会有华丽的光效暴露位置"
-  - "预知未来后会随机改变看到的未来片段"
-  - "改变记忆时自己也会被轻微影响"
-  - "操控载具时会有夸张的漂移特效"
-  - "说服他人后会不自觉地透露一个秘密"
+  - 每年地球上温度下降5度
+  - 新的一年到来时，任何人都有50%的概率彻底遗忘你
+  - 成功概率50%，失败消耗五年寿命
+  - 下落高度超过一米就会摔伤，超过两米直接死亡
+  - 你只能在联网状态下思考
+  - 你每天都会遭遇一场针对你的刺杀
+  - 你每天必需使用该能力1000次否则能力会失效
+  - 你会得前列腺炎
+  - 你的皮肤对水过敏
+  - 你会穿越到异世界并且遇到一只史莱姆和骷髅
+  - 有一颗半径50KMM的小行星马上要砸向你
+  - 你每天起来都不会记得昨天发生的事
+  - 你的仇人会得到相同的能力
+  - 你的手机上面的所有内容都会被你的父母查看
+  - 你会不受控制地追着狗咬
+  - 你的智商行为变为6岁水平
+  - 你必须跑到人多的地方把这个超能力的名字喊出来才能生效
+  - 受伤时，在你的周围生成6个即爆炸弹💣
+  - 你对面食、米饭过敏
+  - 一旦你杀了一个人（包括间接），你将在24小时后死亡
+  - 你创造出来的人和你使用同一条生命。（死了一起死）且不能召回
+  - 50年后将迎来清算，地球毁灭，并且所有居住其上的生物都会死去
+  - 有事可做时会做出诡异行为，包括但不限于乱翻背包，乱扔骰子，跳杂技，后空翻等，导致你看起来像个🤡
+  - 你的大便变得和石头一样硬
+  - 立即死亡
+  - 你变得极为敏感，疑神疑鬼，连一只苍蝇飞过都会被吓一跳
+  - 你坐过的载具会以各种方式被毁
+  - 只能在屋顶下跳跃
+  - 肉身强度会不断下降
+  - 每说一个字都会失血1ml
+  - 事后那些人会知道这是谁干的以及事情经过
+  - 你的财富会变成负数，并且不会有人感激你可怜你
+  - 如果别人将你击杀，他们将夺取包括本能力在内的你的所有超能力；上面这条信息将在你获得能力的瞬间向全球播报
+  - 一旦看着电子屏幕累计15秒你的双眼就会极度疲劳，需要休息5分钟才能缓解
+  - 你无法通过嘴巴说话了
+  - 你永远有饥饿感
+  - 你如果一天睡不满12小时就会极度疲惫，且在获得充足睡眠之前无法使用本能力
+  - 你将重度失眠
+  - 每次发动要随机消耗一个真心爱你的人
+  - 永久失去味觉
+  - 永久失明
+  - 打低端局像人机
+  - 静态视力减少100%
+  - 电脑自动下载原神
+  - 游戏中载具驾驶技术和现实中驾驶技术成反比
+  - 成为NPC
+  - 全天被直播
+  - 成为变态
+  - 变成小兵
+  - 不许穿裤子
+  - 催眠百分百被命中
+  - 变成卷毛狒狒
+  - 参加的聚会必定遇难
+  - 踩到石头必定被绊倒
+  - 穿越成封印物，不见天日的那种
+  - 忘记一切现代知识
+  - 会被任何笑话逗笑，无论有多冷
+  - 成为重度脸盲
+  - 一定会被陌生人当成邪教徒
+  - 不定期大声说出心中所想
+  - 身高不及1米5
+  - 成为顶级乐子人
+  - 每天只能使用3次超能力
+  - 每次使用能力后会随机遗忘一个常用词
+  - 使用能力时需要说出特定咒语
+  - 使用能力后会短暂失明10分钟
+  - 每次能力使用后需要摄入5000卡路里
+  - 能力使用部位会暂时金属化
+  - 使用能力后会被小动物讨厌24小时
+  - 每次能力使用后会随机得罪一个人
+  - 使用能力时周围人会听到尴尬的音效
+  - 使用能力后周围3米内电子设备会死机
+  - 能力使用时会产生难闻的气味
+  - 每次使用能力会随机改变周围物品颜色
+  - 周五全天能力失效
+  - 每月随机一天所有能力反转效果
+  - 使用能力后有10%几率触发相反效果
+  - 使用游戏能力后现实运气下降50%
+  - 获胜后下一局必定匹配到代练车队
+  - 抽卡出货后接下来10抽必定全R卡
+  - 能力使用后会随机产生一种强烈情绪
+  - 每次使用能力会暂时失去一种情感
+  - 能力使用后会对最近的人产生过度依赖
+  - 使用能力后会忘记刚才的1分钟
+  - 每次能力使用会随机丢失一段记忆
+  - 能力使用后会产生虚假记忆
+  - 能力使用后体重会增加10%
+  - 每次使用能力会随机一个部位疼痛
+  - 能力使用时重力会轻微异常
+  - 能力使用后生物钟混乱24小时
+  - 每次使用时间类能力会加速自身衰老
+  - 空间能力使用后会产生1小时时差感
+  - 使用能力后会随机改变口头禅
+  - 每次能力使用后会获得一个奇怪癖好
+  - 能力使用时会产生中二病发言冲动
+  - 使用复活能力后自己会随机获得死者一个特征
+  - 隐身结束时会有华丽的光效暴露位置
+  - 预知未来后会随机改变看到的未来片段
+  - 改变记忆时自己也会被轻微影响
+  - 操控载具时会有夸张的漂移特效
+  - 说服他人后会不自觉地透露一个秘密
+  - 终身阳痿
+  - 不举
