--- a/config/default_config/chuo.yaml
+++ b/config/default_config/chuo.yaml
@@ -1,8 +1,47 @@
-# 戳一戳插件配置文件
-# ============ 回复内容库 ============
 replies:
-  # 文字回复列表 (支持颜文字)
   text:
+    - "随风而去吧！"
+    - "剑出，影随！"
+    - "裁雨留虹！"
+    - "欲买桂花同载酒"
+    - "阴阳有序，命运无常"
+    - "在黎明到来之前..."
+    - "今天的委托完成了吗"
+    - "要听听我新写的诗吗"
+    - "肚子好饿..."
+    - "你已被列入黑名单"
+    - "准备接受审判吧"
+    - "这仇我记下了"
+    - "最喜欢你了"
+    - "要摸摸头"
+    - "给你看个宝贝"
+    - "哼！谁、谁允许你戳我的！...不过看在你这么诚恳的份上...(｀・ω・´)"
+    - "才不是因为你戳我才高兴呢！只是刚好心情好而已！(╯▽╰ )"
+    - "如...如果你非要戳的话...只能戳一下下哦！(⁄ ⁄•⁄ω⁄•⁄ ⁄)"
+    - "戳我是吧...我会用一百倍的爱回报你的哦...呵呵(◕‿◕✿)"
+    - "这么喜欢戳我...那就永远别想逃走了呢(｡•̀ᴗ-)✧"
+    - "你戳的每一下...我都用小本本记着呢(￣ω￣)"
+    - "前面的区域，等抽到五星再来戳吧(〜￣△￣)〜"
+    - "天理长驱...啊别戳我腰！Σ(°△°|||)︴"
+    - "此即，戳人之道！(╯‵□′)╯︵┻━┻"
+    - "再戳就把你做成蒙德土豆饼！(｀∀´)Ψ"
+    - "想吃仙跳墙吗？先停止戳人行为(；´д｀)ゞ"
+    - "戳我可以，得用三份甜甜花酿鸡来换！(๑•̀ㅂ•́)و✧"
+    - "轻轻的我走了，正如我轻轻的被你戳(；一_一)"
+    - "人生若只如初见，何事秋风戳屏幕(´-ω-`)"
+    - "你站在桥上看风景，看风景的人在戳你(ಡωಡ)"
+    - "我要把你的圣遗物全变成防御主词条！(◣_◢)"
+    - "再戳就把你传送到层岩巨渊最底层！(〃＞目＜)"
+    - "我要告诉甘雨你欺负月海亭秘书！٩(๑`^´๑)۶"
+    - "やめて！(住手！)(ﾉ｀Д´)ﾉ"
+    - "No poke! (＞﹏＜)"
+    - "Arrête! (停下!)(╯°□°）╯"
+    - "喵呜~戳戳会怀孕的啦！(๑•́ ₃ •̀๑)"
+    - "再戳我就变成史莱姆吃掉你！嗷呜~(◕ᴗ◕✿)"
+    - "戳一戳会长不高啦！(｡•́︿•̀｡)"
+    - "凌晨三点还在戳人...你是夜猫子吗？(╯﹏╰）"
+    - "午休时间禁止戳人！(◔_◔)"
+    - "今日运势：不宜戳人，宜抽卡(´-ω-`)"
     - "被戳晕了……轻一点啦！"
     - "救命啊，有变态>_<！！！"
     - "哼~~~"
@@ -22,7 +61,7 @@ replies:
     - "你戳我干嘛,闲得蛋疼吗?"
     - "手痒痒,老是喜欢戳人。"
     - "你戳我,我咬你!"
-    - "戳来戳去,真是的... "
+    - '戳来戳去,真是的... '
     - "戳我也没用,改变不了你单身的事实。"
     - "戏精,你戳我有完没完?"
     - "戳我干嘛,要不要脸啊你!"
@@ -144,18 +183,18 @@ replies:
     - "我偏偏要无理取闹除非抱抱我"
     - "无事献殷勤，非…非常喜欢你~"
     - "戳戳戳~希望你能有点自知之明，认识到超级无敌可爱的我"
-    - "要我给你暖被窝吗~哎嘿~想屁吃 "
+    - '要我给你暖被窝吗~哎嘿~想屁吃 '
     - "你再戳我~我就透你"
     - "哎呀呀~喜欢我就直说嘛~"
     - "别戳我了戳疼了"
     - "我发脾气了~气死我了"
-    - "那里....不可以... "
+    - '那里....不可以... '
     - "啊...温柔一点...把我戳疼辣.."
     - "要戳坏掉了！"
     - "你欺负人，呜呜"
     - "你轻一点哦~"
-    - "我怕疼...轻一点~ "
-    - "再戳就坏了！！！ "
+    - '我怕疼...轻一点~ '
+    - '再戳就坏了！！！ '
     - "请...请...不要戳那里..."
     - "要轻一点戳哦~"
     - "快带我去玩！（打滚）"
@@ -201,8 +240,6 @@ replies:
     - "我们刚刚是拯救了世界吧。可为什么，我在哭呢"
     - "你带来新的故事吗？我用亲手做的枣椰蜜糖与你交换"
     - "芝士，与你分享"
-
-  # 语音回复列表 (需纯中文，无颜文字/符号)
   voice:
     - "看我超级旋风！"
     - "被戳晕了……轻一点啦！"
@@ -242,8 +279,21 @@ replies:
     - "你再戳我要生气了哦"
     - "惹不起躲得起您别老戳人家了行不"
     - "戳我一下告诉我有完没完"
-
-  # 计数回复模板
+    - "随风而去吧！"
+    - "剑出，影随！"
+    - "裁雨留虹！"
+    - "欲买桂花同载酒"
+    - "阴阳有序，命运无常"
+    - "在黎明到来之前..."
+    - "今天的委托完成了吗"
+    - "要听听我新写的诗吗"
+    - "肚子好饿..."
+    - "你已被列入黑名单"
+    - "准备接受审判吧"
+    - "这仇我记下了"
+    - "最喜欢你了"
+    - "要摸摸头"
+    - "给你看个宝贝"
   counter:
     - "我今天已经被戳了_num_次啦，休息一下好不好"
     - "我今天已经被戳了_num_次啦，有完没完！"
@@ -251,3 +301,11 @@ replies:
     - "我今天已经被戳了_num_次啦，别戳了!!!"
     - "我今天已经被戳了_num_次啦，不准戳了！！！"
     - "我今天已经被戳了_num_次啦，再戳就坏了！"
+    - "今朝已被戳_num_次，此恨绵绵无绝期"
+    - "_num_次相戳，_num_次心动"
+    - "第_num_次警告！下次将启动天动万象"
+    - "累计被戳_num_次，罪行已超公子"
+    - "呜...第_num_次了，要亲亲才能起来"
+    - "_num_次了啦~要变成你媳妇了"
+    - "成就解锁：【戳人狂魔】（_num_/100）"
+    - "_num_连戳！触发隐藏任务"
