--- a/config/default_config/help.yaml
+++ b/config/default_config/help.yaml
@@ -1,62 +1,68 @@
 - group: '娱乐功能'
   list:
-    - icon: 'paimon'
+    - icon: '记录'
       title: '#模拟人生'
       desc: '对接 AI 的模拟人生'
-    - icon: 'paimon'
+    - icon: '三月七'
       title: '戳他@ 1下'
       desc: '戳死你！！'
-    - icon: 'paimon'
+    - icon: 'wiki'
       title: '今日超能力'
       desc: '随机超能力以及副作用'
-    - icon: 'paimon'
+    - icon: '原神'
       title: '来n份xx涩图'
       desc: '涩图 xx为标签'
-    - icon: 'paimon'
+    - icon: 'sign'
       title: '#答案之书'
       desc: '向答案之书提问'
-    - icon: 'paimon'
+    - icon: '打卡'
       title: '摸鱼日历'
       desc: '今天也要摸会鱼'
-    - icon: 'paimon'
+    - icon: '纠缠之缘'
       title: '#天选之人'
       desc: '随机抽取禁言'
-    - icon: 'paimon'
+    - icon: 'destroy'
       title: '#同归于尽(暂不可用)'
       desc: '与对方同归于尽'
-    - icon: 'paimon'
+    - icon: 'sound'
       title: '#活字乱刷xx'
       desc: '合成鬼畜音频，仅中文'
 - group: 'AI功能'
   list:
-    - icon: 'paimon'
+    - icon: 'chat-private'
       title: '#dp 你好'
       desc: '与 deepseek 对话'
-    - icon: 'paimon'
+    - icon: 'chat-private'
       title: '#qwen 你好'
       desc: '与 通义千问 对话'
-    - icon: 'paimon'
+    - icon: 'chat-private'
       title: '#kimi 你好'
       desc: '与 kimi 对话'
 - group: '实用功能'
   list:
-    - icon: 'paimon'
+    - icon: 'help'
       title: '找[@/QQ号]'
       desc: '查看某人的详细QQ信息'
-    - icon: 'paimon'
+    - icon: 'list'
       title: '#清屏'
       desc: '批量撤回，后面可加数字'
-    - icon: 'paimon'
+    - icon: 'chat'
       title: '#留言xx @xx或QQ号'
       desc: '给某人留言'
 - group: '被动功能'
   list:
-    - icon: 'paimon'
+    - icon: '绑定账号'
       title: '表情回应'
       desc: '请到Guoba配置'
-    - icon: 'paimon'
+    - icon: '米游社'
       title: '戳一戳回复'
-      desc: '与 通义千问 对话'
-    - icon: 'paimon'
+      desc: '戳一戳随机回复'
+    - icon: 'eye'
       title: '有的兄弟'
       desc: '有的兄弟，有的'
+- group: '系统功能'
+  list:
+    - icon: '攻略'
+      title: '#i更新'
+      desc: '更新萝莉插件'
+
