更新依赖项，添加 sqlite3 和 sqlite 包

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "js-yaml": "*",
     "sharp": "*",
     "chinese-to-pinyin": "*",
-    "axios": "*"
+    "axios": "*",
+    "sqlite3": "*",
+    "sqlite": "*"
   }
 }
